fix sakana z-index

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -45,6 +45,7 @@ html .takina {
     right: 200px;
     bottom: 0;
     transform-origin: 100% 100%; /* 从右下开始变换 */
+    z-index: 9999;
 }
 
 html .chisato {
@@ -52,4 +53,5 @@ html .chisato {
     right: 0;
     bottom: 0;
     transform-origin: 100% 100%; /* 从右下开始变换 */
+    z-index: 9999;
 }
